force-app/main/default/objects/Value_Delivery_Session__c/Value_Delivery_Session__c.object-meta.xml
<CustomObject>
    <label>Value Delivery Session</label>
    <nameField>
        <label>Value Delivery Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Delivery Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>