force-app/main/default/objects/Value_Delivery_Session__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>To capture Value Delivery Session End Date And Time</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>