force-app/main/default/objects/Value_Delivery_Session__c/fields/Releases__c.field-meta.xml
<CustomField>
    <fullName>Releases__c</fullName>
    <description>Add Session to The Existing Project</description>
    <label>Releases</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Value Delivery Sessions</relationshipLabel>
    <relationshipName>Value_Delivery_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>