force-app/main/default/objects/Value_Delivery_Session__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>To capture Value Delivery Session Start Date And Time</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>