force-app/main/default/objects/Value_Delivery_Session__c/validationRules/Validate_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Time__c</errorConditionFormula>
    <errorMessage>Session end date should be greater than start date.</errorMessage>
</ValidationRule>